kubernetes/apps/networking/envoy-gateway/gateway/internal-secure/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-secure
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal-secure.chestr.dev
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: &ip 10.0.20.101
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      io.cilium/lb-ipam-ips: *ip
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-secure-proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.chestr.dev"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.chestr.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: chestr-dev-tls
